2002-06-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* System.Web/HttpResponse.cs: 

	Fixes based on class status page:
	
		- Add attributes (DefaultEvent, ParseChildren).
		- Fix declarations.
		- Explicitly implement some interfaces (IPostBackDataHandler
		and IPostBackEventHandler).
		- Implemented some missing methods.

2002-06-29  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpContext.cs:
	(Session): return null instead of throwing an exception.

	* HttpRequest.cs:
	(HttpMethod): return RequestType if not set.
	(GetRawContent): return QueryString if we don't have a
	HttpWorkerRequest.

	* HttpUtility.cs: fixed Decode and Encode.

2002-06-25  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplication.cs:
	* HttpContext.cs: added System.Web.SessionState namespace.

	* HttpSessionState.cs: removed. It is under
	System.Web.SessionState.

2002-06-10  Duncan Mak  <duncan@ximian.com>

	* HttpBrowserCapabilities.cs (BackgroundSounds): Fixed typo.

2002-06-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRequest.cs: implemented Browser property.

2002-06-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpBrowserCapabilities.cs: stubbed out.

2002-05-18  Miguel de Icaza  <miguel@ximian.com>

	* HttpRuntime.cs: Reformat file.

2002-05-07  Duncan Mak  <duncan@ximian.com>

	* HttpBrowserCapabilities.cs: Added, replacing
	HttpBrowserCapabilites because of typo.

	* HttpBrowserCapabilites.cs: Removed, replaced by above.

	* HttpRequest.cs (Browser): Fixed typo.

2002-04-12  Patrik Torstensson <patrik.torstensson@labs2.com>

	* HttpApplication.cs: Minor updates
	* HttpApplicationState.cs: Ready.
	* HttpClientCertificate.cs: Signature updates
	* HttpValueCollection.cs: ready
	* HttpStaticObjectsCollection.cs: ready
	* HttpResponseHeader.cs: made internal only
	* HttpResponse.cs: Signature updates
	* HttpPostedFile.cs: ready
	* HttpCacheVaryByHeaders.cs: ready (except communication to policy)