@@ -1,3 +1,7 @@
+2002-07-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* HttpRuntime.cs: don't throw NotImplemented in a couple of methods.
+
 2002-06-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* System.Web/HttpResponse.cs: 
